--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 :root{
     font-family: "Alice", serif;
-    line-height: 150%;
     color: #573a37;
 }
 body{
@@ -20,6 +23,18 @@ img {
     border-radius: 16px;
 }
 
+main{
+    padding: 24px;
+}
+
+section + section{
+    margin-top: 24px;
+}
+
+#about p + p{
+    margin-top: 12px;
+}
+
 h1 {
     line-height: 140%;
     font-size: 40px;
@@ -31,4 +46,10 @@ h2 {
 
 h1, h2 {
     color: #291b1a;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+
+ul{
+    padding-left: 24px;
 }
